# archmatrix

./: .gitignore  Cargo.toml  README.md  generate.sh
.github/workflows/: main.yml
context/: README.md
src/: main.rs  pyenv.rs
tags/: Dockerfile.Aws  Dockerfile.Pyenv310  Dockerfile.Pyenv310A  Dockerfile.Pyenv310Stripped  Dockerfile.Pyenv39  Dockerfile.Pyenv39A  Dockerfile.Pyenv39Stripped  Dockerfile.Tf12  Dockerfile.Tf12A  Dockerfile.Tf12Aws
