[package]
name = "arch-docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
indoc = "1.0.6"
octocrab = "0.16.0"
simple-error = "0.2.3"
tokio = { version = "1.18.2", features = ["full"] }
